// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates new file 1`] = `
[
  {
    "item": {
      "path": "test",
      "type": "folder",
    },
    "state": {},
  },
  {
    "item": {
      "content": "",
      "path": "test/App.js",
      "type": "file",
    },
    "state": {},
  },
  {
    "item": {
      "path": "components",
      "type": "folder",
    },
    "state": {},
  },
  {
    "item": {
      "content": "",
      "path": "Untitled file.js",
      "type": "file",
    },
    "state": {
      "isCreating": true,
    },
  },
]
`;

exports[`creates new file 2`] = `
[
  {
    "item": {
      "path": "test",
      "type": "folder",
    },
    "state": {
      "isExpanded": true,
    },
  },
  {
    "item": {
      "content": "",
      "path": "test/App.js",
      "type": "file",
    },
    "state": {},
  },
  {
    "item": {
      "path": "components",
      "type": "folder",
    },
    "state": {},
  },
  {
    "item": {
      "content": "",
      "path": "test/Untitled file.js",
      "type": "file",
    },
    "state": {
      "isCreating": true,
    },
  },
]
`;

exports[`creates new folder 1`] = `
[
  {
    "item": {
      "path": "test",
      "type": "folder",
    },
    "state": {},
  },
  {
    "item": {
      "content": "",
      "path": "test/App.js",
      "type": "file",
    },
    "state": {},
  },
  {
    "item": {
      "path": "components",
      "type": "folder",
    },
    "state": {},
  },
  {
    "item": {
      "path": "Untitled folder",
      "type": "folder",
    },
    "state": {
      "isCreating": true,
    },
  },
]
`;

exports[`creates new folder 2`] = `
[
  {
    "item": {
      "path": "test",
      "type": "folder",
    },
    "state": {
      "isExpanded": true,
    },
  },
  {
    "item": {
      "content": "",
      "path": "test/App.js",
      "type": "file",
    },
    "state": {},
  },
  {
    "item": {
      "path": "components",
      "type": "folder",
    },
    "state": {},
  },
  {
    "item": {
      "path": "test/Untitled folder",
      "type": "folder",
    },
    "state": {
      "isCreating": true,
    },
  },
]
`;
